# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1258 2013/04/25 09:25:02 ago Exp $

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.62.ebuild:
  Stable for sparc, wrt bug #467144

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.62.ebuild:
  Stable for s390, wrt bug #467144

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.62.ebuild:
  Stable for ppc, wrt bug #467144

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.62.ebuild:
  Stable for arm, wrt bug #467144

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.62.ebuild:
  Stable for alpha, wrt bug #467144

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.62.ebuild:
  Stable for x86, wrt bug #467144

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.62.ebuild:
  Stable for amd64, wrt bug #467144

  25 Apr 2013; Jeroen Roovers <jer@gentoo.org> portage-2.1.11.62.ebuild:
  Stable for HPPA (bug #467144).

  20 Apr 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.60.ebuild,
  -portage-2.1.11.61.ebuild, -portage-2.2.0_alpha171.ebuild,
  -portage-2.2.0_alpha172.ebuild:
  Remove old versions.

*portage-2.2.0_alpha173 (12 Apr 2013)

  12 Apr 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha173.ebuild:
  2.2.0_alpha172 version bump. This includes all of the fixes in 2.1.11.62. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.62 (12 Apr 2013)

  12 Apr 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.62.ebuild:
  2.1.11.62 version bump. This fixes a repoman bug which randomly triggered
  incorrect package.use.stable.* handling. Bug #462382 tracks all bugs fixed
  since portage-2.1.11.55.

*portage-2.2.0_alpha172 (11 Apr 2013)

  11 Apr 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha172.ebuild: