@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1258 2013/04/25 09:25:02 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1259 2013/04/27 21:57:26 zmedico Exp $
+
+  27 Apr 2013; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.52.ebuild,
+  -portage-2.2.0_alpha166.ebuild:
+  Remove old versions.
 
   25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.62.ebuild:
   Stable for sparc, wrt bug #467144
